--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hive-tools-database",
   "version": "1.0.0",
   "module": "src/index.ts",
+  "main": "src/index.ts",
   "type": "module",
   "author": "paroxity",
   "dependencies": {
