--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,17 @@
 {
   "compilerOptions": {
-    // Enable latest features
+    "declaration": true,
+    "esModuleInterop": true,
     "lib": ["ESNext", "DOM"],
-    "target": "ESNext",
     "module": "ESNext",
-    "moduleDetection": "force",
-    "allowJs": true,
-
-    // Bundler mode
     "moduleResolution": "bundler",
-    "verbatimModuleSyntax": true,
-    "noEmit": true,
-
-    "sourceMap": true,
-
-    // Best practices
-    "strict": true,
+    "outDir": "dist",
     "skipLibCheck": true,
-    "noFallthroughCasesInSwitch": true,
-
-    // Some stricter flags (disabled by default)
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
-  }
+    "sourceMap": true,
+    "strict": true,
+    "target": "ESNext",
+    "resolveJsonModule": true,
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
