--- a/package.json
+++ b/package.json
@@ -22,5 +22,23 @@
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./database": {
+      "types": "./dist/lib/database.d.ts",
+      "default": "./dist/lib/database.js"
+    },
+    "./tables": {
+      "types": "./dist/lib/tables.d.ts",
+      "default": "./dist/lib/tables.js"
+    },
+    "./types": {
+      "types": "./dist/lib/types.d.ts",
+      "default": "./dist/lib/types.js"
+    }
   }
 }
